--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: MEMSS
-Version: 0.2-3
-Date: 2006-01-19
+Version: 0.2-4
+Date: 2006-09-21
 Title: Data sets from Mixed-effects Models in S
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Data sets and sample analyses from Pinheiro and Bates, 
   "Mixed-effects Models in S and S-PLUS" (Springer, 2000).
-Depends: R(>= 2.2.0), Matrix(>= 0.995-2)
-Suggests: lattice
+Depends: R(>= 2.4.0), lme4(>= 0.9975-0)
 LazyData: yes
 License: GPL version 2 or later
-Packaged: Thu Jan 19 14:48:34 2006; bates
+Packaged: Thu Sep 21 08:18:46 2006; bates
