--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
 Package: MEMSS
-Version: 0.3-8
-Date: 2011-01-27
+Version: 0.9-0
+Date: 2011-02-15
 Title: Data sets from Mixed-effects Models in S
-Author: Douglas Bates <bates@stat.wisc.edu>
-Maintainer: Douglas Bates <bates@stat.wisc.edu>
+Author: Douglas Bates <bates@stat.wisc.edu>, Martin Maechler
+        <maechler@R-project.org> and Ben Bolker <bbolker@gmail.com>
+Maintainer: <lme4-authors@R-forge.wu-wien.ac.at>
 Description: Data sets and sample analyses from Pinheiro and Bates,
         "Mixed-effects Models in S and S-PLUS" (Springer, 2000).
 Depends: R(>= 2.12.0), lme4 (>= 0.999375-36)
 LazyData: yes
 License: GPL (>= 2)
-Packaged: 2011-01-27 16:17:30 UTC; bates
 Repository: CRAN
-Date/Publication: 2011-01-27 17:46:13
+Repository/R-Forge/Project: lme4
+Repository/R-Forge/Revision: 1265
+Date/Publication: 2012-10-29 08:57:17
+Packaged: 2012-10-29 08:57:17 UTC; ripley
